updating nav and header

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-# victorialung
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Victoria Lung</title>
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:400,500,700|Encode+Sans+Semi+Expanded:400,500,600,700|Merriweather:400,700,900|Montserrat:300,400,500,600,700,800,900|Muli:400,600,700,800|Nunito+Sans:400,600,700,800|Rubik:400,500,700|Titillium+Web:400,400i,600,600i,700"
+    rel="stylesheet">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="vendors/materialize/css/materialize.min.css" media="screen,projection" />
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <!-- start navbar -->
+  <div class="navbar-fixed">
+    <nav class="pdark-color ptext-color">
+      <div class="nav-wrapper">
+        <ul id="nav-mobile" class="left navbar-list">
+          <li class="ptext-color font-var navbar-cells">
+            <a class=" navbar-elements" href="#">WORKS</a>
+          </li>
+          <li class="ptext-color font-var navbar-cells">
+            <a class="navbar-elements" href="#">ABOUT</a>
+          </li>
+          <li class="ptext-color font-var navbar-cells">
+            <a class="navbar-elements" href="#">CONTACT</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <!-- end navbar -->
+  <!-- start main section -->
+  <div class="container user-presentation b-gradient p-container">
+    <div class="row ">
+      <div class="col s12 m12 ptext-color p-2 ">
+        <div class="user-info">
+          <h3 class="">Hi, I am Victoria Lung.
+            <br>
+            <strong>I'm a UX Designer</strong>
+          </h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus maiores ex cumque ut temporibus officiis, consequuntur
+            facere sit fugit libero accusantium aliquid id corporis totam maxime animi aspernatur quaerat dolores.</p>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <!-- end main section -->
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="vendors/jquery/js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="vendors/materialize/js/materialize.min.js"></script>
+  <script src="js/app.js"></script>
+</body>
+
+</html>
