up-side version

--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
             <br>
             <strong>I'm a UX Designer</strong>
           </h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus maiores ex cumque ut temporibus officiis, consequuntur
-            facere sit fugit libero accusantium aliquid id corporis totam maxime animi aspernatur quaerat dolores.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
         </div>
+        <div class='wave -one'></div>
+        <div class='wave -two'></div>
+        <div class='wave -three'></div>
       </div>
     </div>
 
