updating styles header

--- a/index.html
+++ b/index.html
@@ -36,24 +36,26 @@
   </div>
   <!-- end navbar -->
   <!-- start main section -->
-  <div class="container user-presentation b-gradient p-container">
+  <div class="container user-presentation b-gradient p-container ">
     <div class="row ">
-      <div class="col s12 m12 ptext-color p-2 ">
+      <div class="col s12 m12 ptext-color vh-30 ">
         <div class="user-info">
-          <h3 class="">Hi, I am Victoria Lung.
-            <br>
+          <h3 class="user_name">Hi, I am Victoria Lung.
             <strong>I'm a UX Designer</strong>
           </h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
+          <br>
+          <p class="left-align user-content">I shape technology into products that carry us over hurdles
+            <br> large and small so that we can live better.</p>
         </div>
         <div class='wave -one'></div>
         <div class='wave -two'></div>
         <div class='wave -three'></div>
+        <section id="section03" class="demo">
+          <a href="#section04">
+            <span></span>Scroll</a>
+        </section>
       </div>
     </div>
-
-
   </div>
 
   <!-- end main section -->
